# CalibPrune

./: CalibPrune_Experiment_Plan.md  MANIFEST.md  README.md  pyproject.toml
configs/calibrators/: calibprune.yaml  histogram_binning.yaml  none.yaml  platt.yaml  temperature_scaling.yaml
configs/datasets/: gqa.yaml  mmbench_cn.yaml  pope.yaml  scienceqa.yaml  textvqa.yaml  vqav2.yaml
scripts/: aggregate_results.py  analyze_results.py  apply_family_holm.py  calibrate_from_logits.py  calibrate_lite_grid.py  download_models.py  evaluate_paper_gate.py  extract_qualitative_failure_cases.py  generate_core_claim_ci_table.py  generate_efficiency_measurement_table.py  generate_efficiency_reliability_table.py  generate_gate_figures.py  generate_gate_statistics.py  generate_logit_diagnostics.py  generate_pruned_vs_unpruned_statistics.py  generate_reliability_triptych.py  guarded_adaptive_from_logits.py  plot_efficiency_reliability_tradeoff.py  plot_residual_reliability_correlation.py  plot_retention_curve.py  prepare_calibration_split.py  run_aokvqa_open_ended_exploratory.py  run_pope_lite.py  run_pope_lite_inprocess.py  summarize_adaptive_vs_temperature.py  summarize_qwen_aokvqa_full_sweep.py  summarize_qwen_closedset_gate.py  verify_env.py
tests/: test_analyze_results.py  test_calibrate_lite_grid.py  test_calibrate_script.py  test_calibrators.py  test_family_holm.py  test_gate_figures.py  test_gate_statistics.py  test_guarded_adaptive.py  test_logit_diagnostics.py  test_metrics.py  test_pruners.py  test_run_phenomenon.py  test_smoke.py  test_splits.py  test_statistics.py
(+278 files in other folders)
