[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calibprune"
version = "0.1.0"
description = "Calibration drift experiments for visual token pruning in small VLMs."
requires-python = ">=3.10,<3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "torch>=2.3",
]

[project.optional-dependencies]
vlm = [
  "transformers==4.44.2",
  "accelerate==0.33.0",
  "bitsandbytes==0.43.3",
  "datasets==2.20.0",
  "evaluate==0.4.2",
  "netcal==1.3.5",
  "torchmetrics==1.4.1",
  "hydra-core==1.3.2",
  "wandb==0.17.7",
  "einops==0.8.0",
  "sentencepiece==0.2.0",
  "tiktoken==0.7.0",
]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

